--- a/starter_files/style.css
+++ b/starter_files/style.css
@@ -95,7 +95,13 @@ textarea{
   border: 1px solid #1fabe5;
 width: 100%;
 }
-
+#submit_button{
+  border: 1px solid #1fabe5;
+  background-color: #1fabe5;
+  border-radius: 5px;
+  color: white;
+  padding: 10px 15px;
+}
 /*
     light gray - ##eee
     gray - #dddddd
